@@ -1,3 +1,9 @@
+2009-07-05  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
+
+	* test/util.py, test/test_ssl.py, test/test_crypto.py: Stop trying
+	  to use Twisted's TestCase even when it's available.  Instead,
+	  always use the stdlib TestCase with a few enhancements.
+
 2009-07-04  Jean-Paul Calderone  <exarkun@twistedmatrix.com>
 
 	* Changed most extension types so that they can be instantiated
